# CommandGen

./: CommandGen.c  README.md  build.sh
Downloads/CommandGen-main/: CMakeLists.txt
Downloads/CommandGen-main/src/: ReadCommands.c  ReadCommands.h  ReadingMode.c  ReadingMode.h  command.h  main.c  main.h
src/: PacketReader1.c  command.c  command.h  main.c  main.h  prompt.c  prompt.h  utils.c  utils.h
